--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+V 1.1.3
+    Features
+    - Added Queueing of assets inside a directory
+    - Added Detection of Assets in directory
+    - Added menu option for Detection of all assets in library
+    - Moved Update Library from File to Data
+
+    Known Bugs
+    - File Quit doesn't work, can use x in window
+
 V 1.1.2
     - Added .gitignore
     - Changed Logging start message
@@ -22,7 +32,6 @@ V 1.1.0
             - linux   ~/.ADI/
         - If no config file is found, open config frame to set folders
     - Fixed sorting of trees
-
 
 V 1.0.0
     Initial Release
