--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+V 1.1.4
+    - Bugfixed the detect all menu option
+    - When selecting a tree item it will now refer to the data in self.assets.list instead of the data inside the tree itself
+
 V 1.1.3
     Features
     - Added Queueing of assets inside a directory
