--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,17 @@
+V 1.5.0
+    - Added an option to detect installed assets on start of ADI
+    - Disabled Close button in InstallDialog to closing before process is complete
+    - Fixed a bug where AssetItem.installed_time was not being correctly set during detection
+
+V 1.4.0
+    - Menu
+        - Added a menu option for launching the readme
+
+    - Added a version attribute to main frame
+    - Added an updating feature for old versions of objects to new versions
+        - Checks version number against saved version number,
+            - If there is a mismatch, upgrade saved config and assets to new versions
+
 V 1.3.0
     - Context Menus
         - Added refresh to context menu in list and tree
